--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,16 +50,19 @@
     </RelativeLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_fab"
+        android:id="@+id/add_note_fab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:elevation="2dp"
-        android:layout_margin="10dp"
-        app:tint="@android:color/white"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="#E610AC10"
+        android:elevation="2dp"
         android:src="@drawable/ic_baseline_add_24"
+        app:tint="@android:color/white"
         tools:ignore="ContentDescription" />
 
 
